--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@
           run: npm ci
         - name: Run Nightwatch tests
           continue-on-error: true
-          run: xvfb-run --auto-servernum npm test -- --env chrome
+          run: xvfb-run --auto-servernum npm test
         - name: "Publish test results"
           uses: peaceiris/actions-gh-pages@v3.7.3
           with:
